testdata/language-features/basic-values/if03.reject.out
type error: can not unify
'Bool
with
()

in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ trace
!type error: can not unify
'Bool
with
()

in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ tooltips
testdata/language-features/basic-values/if03.reject.lc 1:13-1:15
    ()